Added session bean

--- a/src/main/webapp/template/footer.xhtml
+++ b/src/main/webapp/template/footer.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <ui:composition>
-	<div id="footer" class="center">&copy; 2022</div>
+	<div id="footer" class="center">Project created by Dobrin
+		Alexandru-George &copy; 2022</div>
 </ui:composition>
 </html>
