--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -9,24 +9,26 @@
 	<h:outputStylesheet name="css/style.css" />
 	<div id="top-header">
 		<div id="header-logo">
-			<p:graphicImage name="images/primefaces_logo.png" height="50" />
+			<p:link id="clockingLink" href="clocking.xhtml">
+				<p:graphicImage name="images/primefaces_logo.png" height="50" />
+			</p:link>
 		</div>
 		<div id="header-info">
-			<strong>User: </strong>
-			<p:outputLabel value="#{loginBean.loggedUser.name}" />
+			<p:outputLabel value="#{sessionBean.welcomeMessage}" />
 		</div>
 	</div>
 
 	<div id="top-menu">
 		<h:form>
 			<p:megaMenu orientation="horizontal">
-				<p:menuitem value="User" url="/user.jsf" icon="fa fw fa-user" />
-				<p:menuitem value="Customer" url="/index.jsf" icon="fa fw fa-user" />
-				<p:menuitem value="Log out" action="#{loginBean.logOut}"
+				<p:menuitem value="Clocking" url="clocking.xhtml"
+					icon="fa fw fa-user" />
+				<p:menuitem value="Clocking History" url="clockingHistory.xhtml"
+					icon="fa fw fa-user" />
+				<p:menuitem value="Log out" action="#{sessionBean.logout}"
 					icon="fa fw fa-sign-out" />
 			</p:megaMenu>
 		</h:form>
 	</div>
 </ui:composition>
-
 </html>
