--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -2,15 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition>
 	<h:outputStylesheet name="css/style.css" />
 	<div id="top-header">
 		<div id="header-logo">
 			<p:link id="clockingLink" href="clocking.xhtml">
-				<p:graphicImage name="images/primefaces_logo.png" height="50" />
+				<p:graphicImage name="images/clockingApp_logo.png" height="70" />
 			</p:link>
 		</div>
 		<div id="header-info">
