--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition>
-	<h:outputStylesheet name="css/style.css" />
+	<h:outputStylesheet name="css/styleHeader.css" />
 	<div id="top-header">
 		<div id="header-logo">
 			<p:link id="clockingLink" href="clocking.xhtml">
