--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -49,7 +49,7 @@ td.ui-panelgrid-cell {
 	margin-top: 1.5rem;
 }
 
-#login-panel {
+.login-panel {
 	display: block;
 	width: 370px;
 	height: 370px;
@@ -58,18 +58,21 @@ td.ui-panelgrid-cell {
 }
 
 .ui-widget.login-title {
-	margin-bottom: 5rem;
 	display: block;
 	text-align: center;
 	font-size: 2rem;
 	font-weight: 600;
 }
 
-.register-grid {
-	width: 50%;
-	height: 370px;
+.register-panel {
+	width: 40%;
+	height: 10vh;
 	padding: 10px;
 	margin: 5% auto 10% auto;
+}
+
+.ui-g div {
+	
 }
 
 .ui-widget.register-title {
