--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -13,48 +13,26 @@ td.ui-panelgrid-cell {
 	border: none !important;
 }
 
-.login-container {
-	display: block;
-	width: 370px;
-	height: 370px;
-	padding: 10px;
-	margin: 10% auto 10% auto;
-}
-
-.register-container {
-	display: block;
-	width: 50%;
-	height: 50vh;
-	margin: 5% auto 10% auto;
-}
-
-#register-panel {
-	display: block;
-	width: 45%;
-	height: 60vh;
-	padding: 10px;
-	margin: 5% auto 10% auto;
-}
-
-#register-form-container {
-	width: 800px;
-	margin: 0 auto;
-	margin-top: 5.5rem;
-	padding: 0.5rem;
-}
-
-#login-form-container {
-	width: 300px;
-	margin: 0 auto;
-	margin-top: 1.5rem;
-}
-
 .login-panel {
 	display: block;
 	width: 370px;
 	height: 370px;
 	padding: 10px;
 	margin: 10% auto 10% auto;
+}
+
+.register-panel {
+	width: 40%;
+	height: 10vh;
+	padding: 10px;
+	margin: 5% auto 10% auto;
+}
+
+.clocking-panel {
+	width: 40%;
+	height: 10vh;
+	padding: 10px;
+	margin: 5% auto 10% auto;
 }
 
 .ui-widget.login-title {
@@ -66,17 +44,6 @@ td.ui-panelgrid-cell {
 	font-weight: 600;
 }
 
-.register-panel {
-	width: 40%;
-	height: 10vh;
-	padding: 10px;
-	margin: 5% auto 10% auto;
-}
-
-.ui-g div {
-	
-}
-
 .ui-widget.register-title {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
@@ -84,6 +51,10 @@ td.ui-panelgrid-cell {
 	text-align: center;
 	font-size: 2rem;
 	font-weight: 600;
+}
+
+.ui-g div {
+	
 }
 
 .input-span {
