--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -9,30 +9,25 @@ body {
 	margin: 0;
 }
 
-td.ui-panelgrid-cell {
-	border: none !important;
-}
-
 .login-panel {
 	display: block;
-	width: 370px;
-	height: 370px;
+	width: 18%;
+	height: 20%;
 	padding: 10px;
 	margin: 10% auto 10% auto;
 }
 
 .register-panel {
 	width: 40%;
-	height: 10vh;
 	padding: 10px;
 	margin: 5% auto 10% auto;
 }
 
 .clocking-panel {
-	width: 40%;
-	height: 10vh;
+	display: block;
+	width: 30%;
 	padding: 10px;
-	margin: 5% auto 10% auto;
+	margin: 3% auto 10% auto;
 }
 
 .ui-widget.login-title {
@@ -53,8 +48,50 @@ td.ui-panelgrid-cell {
 	font-weight: 600;
 }
 
+.ui-widget.clocking-title {
+	margin-top: 1rem;
+	margin-bottom: 3rem;
+	display: block;
+	text-align: center;
+	font-size: 2rem;
+	font-weight: 600;
+}
+
+.panel-grid-center {
+	margin: 0 auto;
+}
+
+.panel-grid-actions {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	text-align: center;
+	border: 1px solid black;
+	background-color: #ededed;
+}
+
+.panel-grid-actions>td {
+	border: 1px solid black;
+}
+
 .ui-g div {
-	
+	justify-content: center;
+	text-align: center;
+}
+
+.ui-clock {
+	border: none !important;
+	padding: 0 !important;
+	margin-bottom: 2rem;
+}
+
+.punch-in {
+	background-color: #81e381 !important;
+	color: #400040 !important;
+}
+
+.punch-out {
+	background-color: #ffaaaa !important;
+	color: #400040 !important;
 }
 
 .input-span {
