--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -30,6 +30,13 @@ body {
 	margin: 3% auto 10% auto;
 }
 
+.clocking-history-panel {
+	display: block;
+	width: 50%;
+	padding: 10px;
+	margin: 3% auto 10% auto;
+}
+
 .ui-widget.login-title {
 	margin-top: 1rem;
 	margin-bottom: 3rem;
