--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -22,7 +22,8 @@
 
 	<div id="top-menu">
 		<h:form>
-			<p:megaMenu orientation="horizontal">
+			<p:megaMenu orientation="horizontal"
+				rendered="#{sessionBean.activeSession}">
 				<p:menuitem value="Clocking" url="clocking.xhtml"
 					icon="fa fw fa-user" />
 				<p:menuitem value="Clocking History" url="clockingHistory.xhtml"
